2017-10-17  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/sparc/sparc64/fpu/multiarch/s_trunc.c (__trunc_vis3,
	__trunc_generic): Use attribute_hidden.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_truncf.c (__truncf_vis3,
	__truncf_generic): Likewise.

	* sysdeps/sparc/sparc64/fpu/multiarch/s_fma.c (__fma_vis3,
	__ceil_generic): Use attribute_hidden.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_fmaf.c (__fmaf_vis3,
	__ceilf_generic): Likewise.

	* sysdeps/sparc/sparc64/fpu/multiarch/s_floor.c (__floor_vis3,
	__ceil_generic): Use attribute_hidden.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_floorf.c (__floorf_vis3,
	__ceilf_generic): Likewise.

	* sysdeps/sparc/sparc64/fpu/multiarch/s_ceil.c (__ceil_vis3,
	__ceil_generic): Use attribute_hidden.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_ceilf.c (__ceilf_vis3,
	__ceilf_generic): Likewise.

	* sysdeps/sparc/sparc-ifunc.h (sparc_libc_ifunc): New macro.
	(sparc_libm_ifunc_redirected): Likewise.
	(sparc_ifunc_redirected_hidden_def): Likewise.

	* config.h.in (HAVE_AS_VIS3_SUPPORT): Remove check for VIS3 support.
	* sysdeps/sparc/configure.ac (HAVE_AS_VIS3_SUPPORT): Likewise.
	* sysdeps//sparc/sparc32/sparcv9/fpu/multiarch/s_fdim.c: Likewise.
	* sysdeps//sparc/sparc32/sparcv9/fpu/multiarch/s_fdimf.c: Likewise.
	* sysdeps//sparc/sparc32/sparcv9/fpu/multiarch/s_fma.c: Likewise.
	* sysdeps//sparc/sparc32/sparcv9/fpu/multiarch/s_fmaf.c: Likewise.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_ceil.c: Likewise.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_ceilf.c: Likewise.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_floor.c: Likewise.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_floorf.c: Likewise.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_fma.c: Likewise.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_fmaf.c: Likewise.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_trunc.c: Likewise.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_truncf.c: Likewise.
	* sysdeps/sparc/sparc-ifunc.h [!HAVE_AS_VIS3_SUPPORT]